# hello-chip8

./: .gitignore  CHANGELOG.md  LICENSE  cabal.project  hello-chip8.cabal
.github/workflows/: haskell.yml
app/: Instructions.hs  Main.hs  Tracing.hs
