cabal-version:      3.4
name:               hello-chip8
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Svyazin
maintainer:         guybrush@live.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hello-chip8
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Instructions,
      Tracing
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0,
                      binary,
                      bytestring,
                      containers,
                      llvm-tf,
                      mtl
    hs-source-dirs:   app
    default-language: GHC2021
